# project-4-novel-nest

./: Dockerfile  db.sqlite3  fly.toml  pyproject.toml
NovelNest/: README.md  asgi.py  settings.py  urls.py  wsgi.py
main_app/: admin.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_creditcard.py  0003_creditcard_genres.py  0004_genre_img_url.py
main_app/static/css/: style.css
main_app/templates/: base.html  home.html  profile.html
main_app/templates/main_app/: creditcard_confirm_delete.html  creditcard_form.html  genre_detail.html  genre_list.html
main_app/templates/registration/: login.html  signup.html
